add google OAuth2

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,6 +17,9 @@
     <div class="container unauthenticated">
         With gitHub: <a href="/login/gitHub">click here</a>
     </div>
+    <div class="container unauthenticated">
+        With google: <a href="/login/google">click here</a>
+    </div>
     <div class="container authenticated" style="display:none">
         Logged in as: <span id="user"></span>
         <div>
